--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -166,5 +166,66 @@
     "maxValue": "Максимальное значение: {{max}}",
     "minLength": "Минимальная длина: {{min}}",
     "maxLength": "Максимальная длина: {{max}}"
+  },
+  "settings": {
+    "title": "Настройки",
+    "general": "Общие",
+    "profile": "Профиль",
+    "security": "Безопасность",
+    "notifications": "Уведомления",
+    "language": "Язык",
+    "theme": "Тема",
+    "save": "Сохранить",
+    "cancel": "Отмена",
+    "reset": "Сбросить",
+    "database": {
+      "title": "Настройки базы данных",
+      "subtitle": "Управление конфигурацией PouchDB и синхронизацией",
+      "basic_settings": "Основные настройки",
+      "name": "Название базы данных",
+      "name_placeholder": "Введите название базы данных",
+      "adapter": "Адаптер",
+      "auto_compaction": "Автоматическая очистка",
+      "sync_settings": "Настройки синхронизации",
+      "sync_enabled": "Включить синхронизацию",
+      "remote_url": "URL удаленного сервера",
+      "remote_url_placeholder": "https://example.com:5984",
+      "test_connection": "Проверить соединение",
+      "sync_interval": "Интервал синхронизации",
+      "minute": "минута",
+      "minutes": "минут",
+      "hour": "час",
+      "performance_settings": "Настройки производительности",
+      "batch_size": "Размер пакета",
+      "max_retries": "Максимум повторов",
+      "timeout": "Таймаут (мс)",
+      "timeout_hint": "в миллисекундах (1000-300000)",
+      "logging_settings": "Настройки логирования",
+      "logging_enabled": "Включить логирование",
+      "log_level": "Уровень логирования",
+      "log_level_error": "Ошибки",
+      "log_level_warn": "Предупреждения",
+      "log_level_info": "Информация",
+      "log_level_debug": "Отладка",
+      "save": "Сохранить настройки",
+      "reset": "Сбросить к умолчанию",
+      "export": "Экспорт конфигурации",
+      "import": "Импорт конфигурации",
+      "statistics": "Статистика базы данных",
+      "total_users": "Всего пользователей",
+      "total_projects": "Всего проектов",
+      "total_time_entries": "Всего временных записей",
+      "total_invoices": "Всего счетов",
+      "total_payments": "Всего платежей",
+      "total_size": "Общий размер",
+      "refresh_stats": "Обновить статистику",
+      "clear_all_data": "Очистить все данные",
+      "migrations": "Миграции базы данных",
+      "current_version": "Текущая версия",
+      "available_migrations": "Доступные миграции",
+      "no_migrations_available": "Нет доступных миграций",
+      "run_migrations": "Выполнить миграции",
+      "save_success": "Настройки успешно сохранены"
+    }
   }
 }
